--- a/pom.xml
+++ b/pom.xml
@@ -966,6 +966,7 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-devtools</artifactId>
                     <optional>true</optional>
+                    <scope>runtime</scope>
                 </dependency>
             </dependencies>
             <properties>
