--- a/package.json
+++ b/package.json
@@ -84,12 +84,14 @@
     "bootstrap": "^3.3.7",
     "bootstrap-icons": "^1.5.0",
     "dayjs": "1.10.5",
+    "file-saver": "^2.0.5",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-webstorage": "8.0.0",
     "rxjs": "6.6.7",
     "swagger-ui-dist": "3.50.0",
     "sweetalert2": "^11.1.7",
     "tslib": "2.3.0",
+    "xlsx": "^0.17.4",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
