--- a/package.json
+++ b/package.json
@@ -83,11 +83,15 @@
     "@ng-bootstrap/ng-bootstrap": "9.1.3",
     "bootstrap": "^3.3.7",
     "bootstrap-icons": "^1.5.0",
+    "chart.js": "^3.7.0",
     "dayjs": "1.10.5",
     "file-saver": "^2.0.5",
+    "jspdf": "^2.5.0",
+    "ng2-charts": "^3.0.0-rc.7",
     "ngx-barcode": "^0.3.0",
     "ngx-infinite-scroll": "10.0.1",
     "ngx-webstorage": "8.0.0",
+    "pdfmake": "^0.2.4",
     "rxjs": "6.6.7",
     "swagger-ui-dist": "3.50.0",
     "sweetalert2": "^11.1.7",
@@ -104,6 +108,7 @@
     "@angular/service-worker": "12.0.5",
     "@types/jest": "26.0.23",
     "@types/node": "15.12.2",
+    "@types/pdfmake": "^0.1.19",
     "@typescript-eslint/eslint-plugin": "4.27.0",
     "@typescript-eslint/parser": "4.27.0",
     "browser-sync": "2.26.14",
