Add Azure App Service files with automated GitHub Action deployment

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -60,7 +60,11 @@
       "Product",
       "Purchase"
     ],
-    "lastLiquibaseTimestamp": 1629042619000
+    "lastLiquibaseTimestamp": 1629042619000,
+    "azureAppServicePlan": "ASP-hbinventory-b7f2",
+    "azureApplicationInsightsName": "hb-inventory",
+    "azureAppServiceName": "hb-inventory",
+    "azureAppServiceDeploymentType": "github-action"
   },
   "git-provider": "GitHub",
   "git-company": "houssamberrezag",
