--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <properties> 
     <!-- Build properties -->  
     <maven.version>3.3.9</maven.version>  
-    <java.version>1.8</java.version>  
+    <java.version>11</java.version>  
     <node.version>v14.17.1</node.version>  
     <npm.version>7.18.1</npm.version>  
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
@@ -298,11 +298,6 @@
       <groupId>io.dropwizard.metrics</groupId>  
       <artifactId>metrics-core</artifactId> 
     </dependency>  
-    <dependency> 
-      <groupId>com.microsoft.azure</groupId>  
-      <artifactId>applicationinsights-spring-boot-starter</artifactId>  
-      <version>2.5.1</version> 
-    </dependency>  
     <dependency>
             <groupId>com.microsoft.azure</groupId>
             <artifactId>applicationinsights-spring-boot-starter</artifactId>
@@ -373,28 +368,6 @@
         <groupId>org.codehaus.mojo</groupId>  
         <artifactId>properties-maven-plugin</artifactId> 
       </plugin>  
-      <plugin> 
-        <groupId>com.microsoft.azure</groupId>  
-        <artifactId>azure-webapp-maven-plugin</artifactId>  
-        <version>1.8.0</version>  
-        <configuration> 
-          <schemaVersion>V2</schemaVersion>  
-          <resourceGroup>hb-inventory</resourceGroup>  
-          <appName>hb-inventory</appName>  
-          <deployment> 
-            <resources> 
-              <resource> 
-                <directory>${project.basedir}/target</directory>  
-                <includes> 
-                  <include>*.jar</include> 
-                </includes> 
-              </resource> 
-            </resources> 
-          </deployment>  
-          <pricingTier>P1v2</pricingTier>
-          <region>centralus</region>
-        </configuration> 
-      </plugin>  
       <plugin>
                 <groupId>com.microsoft.azure</groupId>
                 <artifactId>azure-webapp-maven-plugin</artifactId>
@@ -402,7 +375,7 @@
                 <configuration>
                     <schemaVersion>V2</schemaVersion>
                     <resourceGroup>hb-inventory</resourceGroup>
-                    <appName>hb-inventory</appName>
+                    <appName>hb-inventory2</appName>
                     <deployment>
                         <resources>
                             <resource>
