--- a/pom.xml
+++ b/pom.xml
@@ -298,11 +298,11 @@
       <groupId>io.dropwizard.metrics</groupId>  
       <artifactId>metrics-core</artifactId> 
     </dependency>  
-    <dependency>
-            <groupId>com.microsoft.azure</groupId>
-            <artifactId>applicationinsights-spring-boot-starter</artifactId>
-            <version>2.5.1</version>
-        </dependency>
+    <dependency> 
+      <groupId>com.microsoft.azure</groupId>  
+      <artifactId>applicationinsights-spring-boot-starter</artifactId>  
+      <version>2.5.1</version> 
+    </dependency>  
     <!-- jhipster-needle-maven-add-dependency --> 
   </dependencies>  
   <build> 
@@ -368,26 +368,28 @@
         <groupId>org.codehaus.mojo</groupId>  
         <artifactId>properties-maven-plugin</artifactId> 
       </plugin>  
-      <plugin>
-                <groupId>com.microsoft.azure</groupId>
-                <artifactId>azure-webapp-maven-plugin</artifactId>
-                <version>1.8.0</version>
-                <configuration>
-                    <schemaVersion>V2</schemaVersion>
-                    <resourceGroup>hb-inventory</resourceGroup>
-                    <appName>hb-inventory2</appName>
-                    <deployment>
-                        <resources>
-                            <resource>
-                            <directory>${project.basedir}/target</directory>
-                            <includes>
-                                <include>*.jar</include>
-                            </includes>
-                            </resource>
-                        </resources>
-                    </deployment>
-                </configuration>
-            </plugin>
+      <plugin> 
+        <groupId>com.microsoft.azure</groupId>  
+        <artifactId>azure-webapp-maven-plugin</artifactId>  
+        <version>1.8.0</version>  
+        <configuration> 
+          <schemaVersion>V2</schemaVersion>  
+          <resourceGroup>hb-inventory</resourceGroup>  
+          <appName>hb-inventory2</appName>  
+          <deployment> 
+            <resources> 
+              <resource> 
+                <directory>${project.basedir}/target</directory>  
+                <includes> 
+                  <include>*.jar</include> 
+                </includes> 
+              </resource> 
+            </resources> 
+          </deployment>  
+          <pricingTier>P1v2</pricingTier>
+          <region>centralus</region>
+        </configuration> 
+      </plugin>  
       <!-- jhipster-needle-maven-add-plugin --> 
     </plugins>  
     <pluginManagement> 
@@ -622,9 +624,9 @@
             <url>jdbc:mysql://localhost:3306/intellpos</url>  
             <defaultSchemaName>intellpos</defaultSchemaName>  
             <username>root</username>  
-            <password></password>
-                        <referenceUrl>hibernate:spring:com.intell.pos.domain?dialect=org.hibernate.dialect.MySQL8Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
-                        <verbose>true</verbose>  
+            <password/>  
+            <referenceUrl>hibernate:spring:com.intell.pos.domain?dialect=org.hibernate.dialect.MySQL8Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>  
+            <verbose>true</verbose>  
             <logging>debug</logging>  
             <contexts>!test</contexts> 
           </configuration>  
@@ -851,7 +853,7 @@
       <activation> 
         <activeByDefault>true</activeByDefault> 
       </activation>  
-      <dependencies></dependencies>  
+      <dependencies/>  
       <build> 
         <plugins> 
           <plugin> 
