--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -64,7 +64,18 @@
     "azureAppServicePlan": "ASP-hbinventory-b7f2",
     "azureApplicationInsightsName": "hb-inventory",
     "azureAppServiceName": "hb-inventory2",
-    "azureAppServiceDeploymentType": "local"
+    "azureAppServiceDeploymentType": "local",
+    "gcpProjectId": "hb-inventory",
+    "gaeServiceName": "default",
+    "gaeLocation": "europe-west6",
+    "gaeInstanceClass": "F4",
+    "gaeScalingType": "automatic",
+    "gaeMinInstances": "0",
+    "gaeMaxInstances": "0",
+    "gaeCloudSQLInstanceNeeded": "N",
+    "herokuAppName": "intellpos",
+    "herokuDeployType": "jar",
+    "herokuJavaVersion": "11"
   },
   "git-provider": "GitHub",
   "git-company": "houssamberrezag",
